# birthday_greeting_kata

./: README.md  input_email.csv  input_sms.csv  input_telegram.csv  main.py  pyproject.toml  tdb.json
bdd_tests/: functions.py
bdd_tests/features/: SendNote.feature
bdd_tests/features/steps/: SendNoteWithCorrectDate.py
data_faker/: fake_data_generator.py
src/: DB_adapter.py  birthday_notebook.py  data_providers.py  output_adapter.py
